--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@use './app/shared/styles/index.scss';
+@use './styles/main.scss';
