--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-toolbar nameApp="Agenda"/>
-<router-outlet />
+<mat-drawer-container class="example-container" [hasBackdrop]="true">
+  <mat-drawer #drawer mode="over">I'm a drawer</mat-drawer>
+  <mat-drawer-content>
+    <app-toolbar [nameApp]="title" (toogleMenu)="drawer.toggle()"></app-toolbar>
+    <router-outlet />
+  </mat-drawer-content>
+</mat-drawer-container>
