--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <mat-drawer #drawer mode="over">I'm a drawer</mat-drawer>
   <mat-drawer-content>
     <app-toolbar [nameApp]="title" (toogleMenu)="drawer.toggle()"></app-toolbar>
+    
+    <app-button></app-button>
     <router-outlet />
   </mat-drawer-content>
 </mat-drawer-container>
